# cattegram

./: .gitignore  .gitmodules  LICENSE  README.md  api.tl  mtproto.tl  rebuild_schema.sh  rpctest.py
cattl/: CBuild  Cargo.toml  README.md  cattl.c  main.c
cattl/data/: benchmark.py  create_future_salts.py  create_req_pq_multi.py  create_res_pq.py  decodetl.py  test.py
cattl/include/: cattl.h  cattl_ext.h
cattl/modules/: mtproto.c
cattl/src/: bytes_buffer.rs  cattl.c  int.c  int128.c  lib.rs  main.rs  mtproto.rs  test.c  tl_error.rs  tl_object.rs  tl_reader.rs  types.rs
cattlc/: Cargo.toml  README.md
cattlc/src/: compiler.rs  main.rs  parser.rs  tokenizer.rs
server/: .gitignore  Cargo.toml  build.rs  config.toml  server.key  server.pub  server_key.py  test.py
server/sql/: schema.sql
server/src/: lib.rs  main.rs  rpc.rs  session.rs  storage.rs  tcp_abridged_combined.rs  transport.rs
server/src/rpc/: account.rs  auth.rs  base.rs  contacts.rs  help.rs  langpack.rs  messages.rs  mtproto.rs  updates.rs  users.rs
telecat/: Cargo.toml  server_key.py  test.py
telecat/src/: authrpc.rs  instance.rs  main.rs  prime.rs  rpc.rs  rsa.rs  session.rs  tcp_abridged.rs  transport.rs  types.rs
tl-buffer/: Cargo.toml
tl-buffer/src/: lib.rs
tl-compiler/: .gitignore  Cargo.toml
tl-compiler/src/: compiler.rs  lib.rs  main.rs  parser.rs  tokenizer.rs
tl-schema/: Cargo.toml  build.rs
tl-schema/src/: defaults.rs  lib.rs
