[package]
name = "catte-server"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
aes = "0.8.4"
async-trait = "0.1.79"
catte-tl-buffer = { path = "../tl-buffer" }
catte-tl-schema = { path = "../tl-schema" }
ctr = "0.9.2"
grammers-crypto = { path = "../grammers/lib/grammers-crypto" }
num-bigint = "0.4.4"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "fs"] }
flate2 = "1.0.30"
rsa = "0.9.6"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
base64 = "0.22.1"
syn = { version = "2.0.77", features = ["full"] }
quote = "1.0.37"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
sqlx-sqlite = "0.8.2"

[build-dependencies]
catte-tl-compiler = { path = "../tl-compiler" }
