[package]
name = "telecat"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.79"
cattl = { path = "../cattl" }
futures = "0.3.30"
grammers-crypto = "0.6.1"
num-bigint = "0.4.4"
once_cell = "1.19.0"
sha1 = "0.10.6"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
